--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
     <title>Document</title>
 </head>
 <link rel="stylesheet" href="style.css">
-
 <body>
-    <div class="table">
-        <h1 class="text">KTM EXC 300</h1>
-     
-    </div>
-<br>
-    <div class="table2">
-        <button class="left"><</button>
-        <button class="right">></button>
-        <img class="img" src="https://k2tour.ru/images/baner-home/enduro.png" alt="">
+    <div class="общая">
+<div class="dir">
+    
+</div>
+<div class="dir2"></div>
+<div class="кузов">
+    <img class="kol" src="photo/Remove-bg.ai_1731931903381.png" alt="">
+  
+    <img c src="photo/Remove-bg.ai_1731930993848.png" alt="">
+    <img class="koleso" src="photo/Remove-bg.ai_1731931903381.png" alt="">
+</div>
+<div class="фара"></div>
+</div>
+    <img class="img" src="https://avatars.mds.yandex.net/i?id=edaf147111075fbbfba3c144b201b0aa_l-4444125-images-thumbs&n=13" alt="">
 
-    </div>
 
+ 
 </body>
 
 </html>
